objects/MMPJ_XRM_Ligne_de_contrat__c.object
<CustomObject>
    <description>MMPJ XRM</description>
    <fields>
        <fullName>MMPJ_XRMSurface__c</fullName>
        <label>Surface</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Code_Region__c</fullName>
        <label>Code Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Commune__c</fullName>
        <label>Commune</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Contrat__c</fullName>
        <label>Contrat</label>
        <referenceTo>MMPJ_Ext_Vign_Contrat__c</referenceTo>
        <relationshipLabel>Lignes de contrat</relationshipLabel>
        <relationshipName>Lignes_de_contrat</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Unite__c</fullName>
        <label>Unité</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_cepage__c</fullName>
        <label>Cépage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_clef_idapports__c</fullName>
        <description>évite les doublons</description>
        <externalId>true</externalId>
        <label>Clé IDApports</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_code_cepage__c</fullName>
        <label>Code Cépage</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_region__c</fullName>
        <label>Région</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ligne de contrat</label>
    <nameField>
        <label>Ligne de contrat</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lignes de contrat</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>